Remove compiled Python bytecode files from the __pycache__ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,28 @@
+# Environment and system files
 .env
 .DS_Store
 .memvid/
 output/
 prompt.memvid
 
+# Documentation
 USAGE.md
-
 CLAUDE.md
 
-# Ignore built distributions and old package versions
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+build/
 dist/
-memvid.egg-info/
 *.egg-info/
+*.egg
 *.whl
 *.tar.gz
 
-# Ignore Python cache files
-__pycache__/
-*.pyc
-
-# Ignore build artifacts from previous versions
+# Project specific
 memvid/__pycache__/
 memvid.egg-info/
 memvid.egg-info/*
